--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Anataka</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=91039dc37ca10556e438bd87c99ad813">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&amp;subset=latin-ext&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
-    <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=ef9efa29ed5490562c2ff272112d2e97">
+    <link rel="stylesheet" href="assets/fonts/line-awesome.min.css?h=ef9efa29ed5490562c2ff272112d2e97">
+    <link rel="stylesheet" href="assets/css/styles.min.css?h=1c31db3648147cc3d9460549469fe5ec">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
                 <div class="container">
                     <div class="row no-gutters justify-content-between align-items-center justify-content-sm-center justify-content-lg-between my-n2 mx-sm-n3">
                         <div class="col-12 col-lg-auto order-1 order-lg-2 py-2 px-sm-3">
-                            <div class="d-flex justify-content-center"><a href="index.html"><img class="img-fluid" src="assets/img/anataka_logo.svg" style="height: 90px;"></a></div>
+                            <div class="d-flex justify-content-center"><a href="index.html"><img class="img-fluid" src="assets/img/anataka_logo.svg?h=e80dbbd2b84c2827c10c00f472727e8b" style="height: 90px;"></a></div>
                         </div>
                         <div class="col-auto col-sm-auto order-2 order-lg-1 py-2 px-sm-3">
                             <div class="row no-gutters justify-content-center align-items-center mx-sm-n3">
@@ -35,7 +35,7 @@
                             </div>
                         </div>
                         <div class="col-auto col-sm-auto order-3 py-2 px-sm-3">
-                            <div class="btn-group align-items-center mb-0" role="group"><button class="btn d-flex align-items-center px-2" type="button" data-target="#modal__search" data-toggle="modal"><img class="img-fluid" src="assets/img/icons/ico_search.svg"></button><button class="btn d-flex align-items-center px-2" type="button"><img class="img-fluid" src="assets/img/icons/ico_account.svg"></button><button class="btn d-flex align-items-center px-2" type="button"><img class="img-fluid" src="assets/img/icons/ico_heart.svg"></button><button class="btn d-flex align-items-center px-2" type="button"><img class="img-fluid" src="assets/img/icons/ico_bag.svg"></button><button class="btn d-flex d-lg-none align-items-center px-2" type="button" data-target="#collapse__menu" data-toggle="collapse"><img src="assets/img/icons/icon-menu_2.svg" style="width: 24px;"></button></div>
+                            <div class="btn-group align-items-center mb-0" role="group"><button class="btn d-flex align-items-center px-2" type="button" data-target="#modal__search" data-toggle="modal"><img class="img-fluid" src="assets/img/icons/ico_search.svg?h=e05d5126dd05a4f3e0a4534c91519120"></button><button class="btn d-flex align-items-center px-2" type="button"><img class="img-fluid" src="assets/img/icons/ico_account.svg?h=fc2a5b53edfbd9ee4308070628c29e49"></button><button class="btn d-flex align-items-center px-2" type="button"><img class="img-fluid" src="assets/img/icons/ico_heart.svg?h=b8b116709a2062edf27e7ac038eca170"></button><button class="btn d-flex align-items-center px-2" type="button"><img class="img-fluid" src="assets/img/icons/ico_bag.svg?h=ec883feb31bb82f657dd22f8e73cc9c0"></button><button class="btn d-flex d-lg-none align-items-center px-2" type="button" data-target="#collapse__menu" data-toggle="collapse"><img src="assets/img/icons/icon-menu_2.svg?h=1f93898562a2f7bb00fe8e6d4bd57f58" style="width: 24px;"></button></div>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-md-6 col-lg-4 py-3">
-                            <div><img class="img-fluid" src="assets/img/content/about.jpeg"></div>
+                            <div><img class="img-fluid" src="assets/img/content/about.jpeg?h=5926e361d72c3b651afe0066decf6542"></div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-8 text-right py-3">
                             <h3 class="text-uppercase h5 mb-5">Marka</h3>
@@ -206,9 +206,9 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
+    <script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js?h=2504f2315ca47ea4d62e67e20a5551d7"></script>
+    <script src="assets/js/script.min.js?h=879a1a8a0951b073e362e99e0e83f212"></script>
 </body>
 
 </html>
