--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <div class="tab-content">
                             <div class="tab-pane fade show active" role="tabpanel" id="tab-1">
                                 <div class="overflow-hidden">
-                                    <div class="row flex-nowrap flickity--slider my-n3">
+                                    <div class="row flex-nowrap flickity--slider">
                                         <div class="col-12 col-sm-6 col-lg-4 py-3">
                                             <div class="card border-0"><a class="d-block" href="product.html">
                                                     <div class="mb-3">
