--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,20 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&amp;subset=latin-ext&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=ef9efa29ed5490562c2ff272112d2e97">
     <link rel="stylesheet" href="assets/fonts/line-awesome.min.css?h=ef9efa29ed5490562c2ff272112d2e97">
-    <link rel="stylesheet" href="assets/css/styles.min.css?h=1c31db3648147cc3d9460549469fe5ec">
+    <link rel="stylesheet" href="assets/css/libs/flickity.css?h=51fe83a97f0f8d929bf811159752b794">
+    <link rel="stylesheet" href="assets/css/libs/jquery.fancybox.css?h=7ec4054ec26e4b52bdc7a7742ac4f113">
+    <link rel="stylesheet" href="assets/css/overrides/flickity.compiled.css?h=af395008b7a3338b8fda12cd7c671f80">
+    <link rel="stylesheet" href="assets/css/components/ratio.compiled.css?h=7ed4d23639d05bc4ca42c6e16d623b43">
+    <link rel="stylesheet" href="assets/css/fx/font-weight.compiled.css?h=6daedb184861f044d67a50abae7c080d">
+    <link rel="stylesheet" href="assets/css/fx/opacity.compiled.css?h=f24831ec69501127c3798b17fcaf93b4">
+    <link rel="stylesheet" href="assets/css/fx/sizes.compiled.css?h=bc9479e78e737028a15ea59b9e77665c">
+    <link rel="stylesheet" href="assets/css/components/fullscreen-modal.compiled.css?h=5a7931fd151bed1d958b0fe4fff8333f">
+    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap-grid.compiled.css?h=a0e2c042aafd03611013bb7368c68abb">
+    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap-reboot.compiled.css?h=3faab249e5b375346df50ce346e323e8">
+    <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.compiled.css?h=be392c9dd5cf15c3ea7e4e466f9e01f9">
+    <link rel="stylesheet" href="assets/css/components/svg.compiled.css?h=37b7d010a67d4db066d66cbd81a24fbf">
+    <link rel="stylesheet" href="assets/css/page.compiled.css?h=fb7724f3fa5104e232735e4b6ca5fbd2">
+    <link rel="stylesheet" href="assets/css/sections/menu.compiled.css?h=950c141364d4915c7a6d8af0ba5e07c8">
 </head>
 
 <body>
@@ -231,9 +244,13 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
+    <script src="assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js?h=2504f2315ca47ea4d62e67e20a5551d7"></script>
-    <script src="assets/js/script.min.js?h=879a1a8a0951b073e362e99e0e83f212"></script>
+    <script src="assets/js/libs/jquery.fancybox.js?h=b63c7cca1b5e4bd57bd854c444b895c9"></script>
+    <script src="assets/js/libs/flickity.pkgd.min.js?h=8625a9d2a4f797e756dbd299c2d74fc2"></script>
+    <script src="assets/js/components/svg.js?h=d9ea285243bbaa184c8b082f54b30ff4"></script>
+    <script src="assets/js/page.js?h=6b45ee3f322378dc3faf859cb456034a"></script>
+    <script src="assets/js/triggers/flickity.js?h=61e535f0b5b04eacd8701dedfd4e9adc"></script>
 </body>
 
 </html>
